Horizontal scroll issue is resolved.

--- a/src/index.sass
+++ b/src/index.sass
@@ -55,6 +55,7 @@ a[id]
   width: 100%
   height: $globe-height
   background-color: $black
+  overflow: hidden
 
   & > canvas
     width: 100%
